--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,3 @@
 {
-    "version":2,
-    "builds":[
-        {
-            "src":"/src/app.js",
-            "use":"@now/node"
-        }
-    ],
-    "routes":[
-        {
-            "src":"/src/(.*)",
-            "dest":"/src/app.js"
-        }
-    ]
+   "rewrites": [{ "source": "/(.*)", "destination": "/src" }]
 }
